# chat-app

./: Procfile  README.md  app.py  auth.py  channel_list.txt  db.py  package.json  pyproject.toml  requirements.txt  test.py  tokens.py
back-end/: README.md  db.py  pyproject.toml
back-end/sql/: query_messages.sql
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.js  index.js  style.css
front-end/src/components/: Channels.js  DateLine.js  Header.js  Login.js  Message.js  MessageForm.js  MessagePane.js  Sidebar.js  Users.js  index.js
front-end/src/utils/: initData.js
sql/: create_channels.sql  create_tables.sql  insert_message.sql  query_messages.sql
